--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,5 +1,5 @@
 FROM golang:alpine
 
 RUN apk update && \
-    apk add git curl gcc musl-dev && \
+    apk add git curl && \
     go get -u github.com/kardianos/govendor
