--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -1,3 +1,4 @@
 FROM golang:latest
 
-RUN go get -u github.com/kardianos/govendor
+RUN go get -u github.com/kardianos/govendor && \
+    go get -u github.com/golang/dep/cmd/dep
